# shooting-range-scoring-system

./: .gitignore
.agents_tmp/: PLAN.md
backend/: pyproject.toml  requirements.txt
backend/config/: asgi.py  settings.py  urls.py
backend/scripts/: esp32_simulator.py
backend/shooting_range/: __init__.py
backend/shooting_range/devices/: __init__.py  admin.py  apps.py  models.py
backend/shooting_range/devices/api/: serializers.py  urls.py  views.py
backend/shooting_range/devices/migrations/: 0001_initial.py
backend/shooting_range/games/: __init__.py  admin.py  apps.py  models.py
backend/shooting_range/games/api/: serializers.py  urls.py  views.py
backend/shooting_range/games/migrations/: 0001_initial.py  0002_initial.py
backend/shooting_range/lanes/: __init__.py  admin.py  apps.py  models.py
backend/shooting_range/lanes/api/: serializers.py  urls.py  views.py
backend/shooting_range/lanes/migrations/: 0001_initial.py
backend/shooting_range/websockets/: consumers.py  middleware.py  urls.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: API.md  NON_DOCKER_DEPLOYMENT.md  WEBSOCKET_PROTOCOL.md
esp32/: platformio.ini
esp32/src/: main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  router.ts
frontend/src/components/: ScoreDisplay.vue  TargetSVG.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/stores/: gameStore.ts
frontend/src/views/: AdminView.vue  ClientView.vue
